# sep-iolibs

./: .gitmodules  CMakeLists.txt  README.md  SEPlibConfig.cmake.in  SEPlibConfigcmake.in  sepInternal.h
cmake/: FindTIRPC.cmake
dockers/: Dockerfile.debian-debug
include/: CMakeLists.txt  segy.h  sep3d.h  sep_main_external.h  sep_pars_external.h  strformats.h  su.h
sep/: CMakeLists.txt  auxclose.c  auxin.c  commands.cpp  commands.h  doc.c.in  initpar.c  maketitle.c  sep.f90  sep_err.c  sep_io.f90  sep_par.f90  separg.c  sepdoc.c  sepdoc.c.in  sepgetch.c  sepstrinhead.c  sepstrinoutdata.c  sepstroutdata.c  sepstrouthead.c  sepstrpar.c  sepstrscrdata.c  sepstrsocketdata.c  septagstream.c  sepwindow.c  sreed.c  srite.c  status.c  streamlist.c  strformats.c
sep3d/: CMakeLists.txt  getheaderbytes.c  putgetgridwindow.c  putvalheaders.c  sep_3d_close.c
superset/: CMakeLists.txt  list.c  rite_file.c  struct_sepc.c  struct_sepf.f90  type_usage.c
